homelab/k8s/navidrome/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: navidrome
  labels:
    istio-injection: enabled
