homelab/k8s/navidrome/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: navidrome
          image: deluan/navidrome:0.60.3
          ports:
            - containerPort: 4533
              name: http
          volumeMounts:
            - mountPath: /music
              name: music
            - mountPath: /data
              name: data
      volumes:
        - name: music
          nfs:
            path: /opt/tank1/starr/media/music
            server: nfs.k8s
        - name: data
          persistentVolumeClaim:
            claimName: navidrome-data
